# KairoGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-test.yml
Runtime/KairoPlayer/: CMakeLists.txt  RuntimeInputBridge.cppm  RuntimeLogicBridge.cppm  RuntimePhysicsBridge.cppm  RuntimeProject.cppm  RuntimeRenderBridge.cppm  main.cpp
Runtime/KairoPlayer/tests/: RuntimeProjectTests.cpp
cmake/toolchains/: clang.cmake
